Visual issue scrollbar solved

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,3 +19,11 @@ code {
     display: none !important;
   }
 }
+
+body {
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
+}
